--- a/modules/core/client/views/categories.client.view.html
+++ b/modules/core/client/views/categories.client.view.html
@@ -3,8 +3,8 @@
     <div class="col-md-4 table-scrolling">
       <h2><strong>Categories</strong></h2>
       <table class="table table-striped table-hover" id="table-border">
-        <tr ng-repeat="category in categories" on-click="adjustFilter(category[$index])'">
-          <td><h3 class="list-group-item-heading" ng-bind="category"></h3></td>
+        <tr ng-repeat="category in categories" ng-click="adjustFilter(category[$index])">
+          <td><h3 class="list-group-item-heading" ng-bind="category.name"></h3></td>  
         </tr>
       </table>
     </div>
@@ -12,7 +12,7 @@
       <h2 class="text-center"><strong>Listings</strong></h2>
       <div class="table-scrolling">
         <table class="table table-striped table-hover" id="table-border">
-          <tr ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})">
+          <tr ng-repeat="recipe in recipes | filter: contains($index)" ui-sref="recipes.view({recipeId: recipe._id})">
             <td>Posted on
             <span ng-bind="recipe.updated_at | date:'mediumDate'"></span>
             <h4 class="list-group-item-heading" ng-bind="recipe.title"></h4>
