--- a/modules/users/client/views/settings/change-profile-picture.client.view.html
+++ b/modules/users/client/views/settings/change-profile-picture.client.view.html
@@ -1,18 +1,21 @@
 <section class="row" ng-controller="ChangeProfilePictureController">
+  <script src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js" type="text/javascript"></script>
   <div class="col-xs-offset-1 col-xs-10 col-md-offset-3 col-md-4">
     <form class="signin form-horizontal">
       <fieldset>
         <div class="form-group text-center">
           <img ng-src="{{imageURL}}" alt="{{user.displayName}}" class="img-thumbnail user-profile-picture">
+         
         </div>
         <div class="text-center form-group" ng-hide="uploader.queue.length">
           <span class="btn btn-default btn-file">
-              Select Image <input type="file" nv-file-select uploader="uploader">
+              Select Image <input type="file" nv-file-select uploader="uploader" id ="bobby">
           </span>
         </div>
         <div class="text-center form-group" ng-show="uploader.queue.length">
-          <button class="btn btn-primary" ng-click="uploadProfilePicture();">Upload</button>
-          <button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>
+          <button class="btn btn-primary" ng-click="edUploadUserPic();">Create Bucket</button>
+          <!--<button class="btn btn-default" ng-click="cancelUpload();">Cancel</button>-->
+
         </div>
         <div ng-show="success" class="text-center text-success">
           <strong>Profile Picture Changed Successfully</strong>
