--- a/modules/core/client/css/core.css
+++ b/modules/core/client/css/core.css
@@ -39,21 +39,21 @@ a:hover .header-profile-image {
 .container {
   margin-right: 0;
   margin-left: 0;
-  padding: 0px;
+  padding: 0;
 }
 @media (min-width: 768px) {
   .container {
-    width: 750px;
+    width: 100%;
   }
 }
 @media (min-width: 992px) {
   .container {
-    width: 970px;
+    width: 100%;
   }
 }
 @media (min-width: 1200px) {
   .container {
-    width: 1170px;
+    width:100%;
   }
 }
 @media (min-width: 1360px) {
@@ -356,8 +356,8 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 }
 
 #cat1 {
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto; 
   margin-top: 3%;
@@ -365,8 +365,8 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 }
 
 #cat2 {
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto; 
   margin-top: 3%;
@@ -374,8 +374,8 @@ box-shadow: 0px 0px 15px 0px rgba(0,0,0,0.75);
 }
 
 #cat3 {
-  height: 90%;
-  width: 90%;
+  height: 100%;
+  width: 100%;
   margin-left: auto;
   margin-right: auto; 
   margin-top: 3%;
