--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -1,15 +1,15 @@
-<section ng-controller="CategoriesController" ng-init="find()">
+<section ng-controller="CategoriesController" ng-init="find(); findRecipes()">
   <div class="row">
     <div class="col-md-4 table-scrolling">
       <h2><strong>Categories</strong></h2>
       <table class="table table-striped table-hover" id="table-border">
-        <tr ng-repeat="category in categories" ng-click="adjustFilter(category[$index])">
+        <tr ng-repeat="category in categories" ng-click="adjustFilter($index)">
           <td><h3 class="list-group-item-heading" ng-bind="category.name"></h3></td>
         </tr>
       </table>
     </div>
     <div class="col-md-8">
-      <h2 class="text-center"><strong>Listings</strong></h2>
+      <h2 class="text-center"><strong>{{currentCategory.name}}</strong></h2>
       <div class="table-scrolling">
         <table class="table table-striped table-hover" id="table-border">
           <tr ng-repeat="recipe in recipes" ui-sref="recipes.view({recipeId: recipe._id})">
