--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -3,7 +3,7 @@
     <div class="col-md-4 table-scrolling">
       <h2><strong>Categories</strong></h2>
       <table class="table table-striped table-hover" id="table-border">
-        <tr ng-repeat="category in categories" ng-click="adjustFilter($index)">
+        <tr ng-repeat="category in categories | orderBy:'+name':false" ng-click="adjustFilter(categories.indexOf(category))">
           <td><h3 class="list-group-item-heading" ng-bind="category.name"></h3></td>
         </tr>
       </table>
