--- a/modules/categories/client/views/create-categorie.client.view.html
+++ b/modules/categories/client/views/create-categorie.client.view.html
@@ -5,14 +5,14 @@
   <div class="col-md-12">
     <form name="categoryForm" class="form-horizontal" ng-submit="create(categoryForm.$valid)" novalidate>
       <fieldset>
-        <div class="form-group" show-errors>
+        <div class="col-md-6 form-group" show-errors>
           <label for="name">Name</label>
           <input name="name" type="text" ng-model="name" id="name" class="form-control" placeholder="Name" required>
           <div ng-messages="categoryForm.title.$error" role="alert">
             <p class="help-block error-text" ng-message="required">Category Name is required.</p>
           </div>
         </div>
-        <div class="form-group">
+        <div class="col-md-6 form-group">
           <label for="tag">Tag</label>
           <input name="tag" type="text" ng-model="tag" id="tag" class="form-control" placeholder="Tag" required>
           <!--<div ng-messages="categoryForm.title.$error" role="alert">-->
