--- a/modules/categories/client/views/list-categories.client.view.html
+++ b/modules/categories/client/views/list-categories.client.view.html
@@ -5,6 +5,7 @@
       <table class="table table-striped table-hover" id="table-border">
         <tr ng-repeat="category in categories | orderBy:'+name':false" ng-click="adjustFilter(categories.indexOf(category))">
           <td><h3 class="list-group-item-heading" ng-bind="category.name"></h3></td>
+          <td ng-click="remove(category)"><span style="color: red;" class="glyphicon glyphicon-remove"></span></td>
         </tr>
       </table>
     </div>
