--- a/modules/recipes/client/views/healthify-recipe.client.view.html
+++ b/modules/recipes/client/views/healthify-recipe.client.view.html
@@ -18,10 +18,10 @@
             <h3>Parameters</h3>
           </td>
           <td>
-            <h3>Max?</h3>
+            <h3>Minimize?</h3>
           </td>
           <td>
-            <!--this is where button goes-->
+            <h3>Healthify Ingredient</h3>
           </td>
           <td>
             <h3>Alternative Ingredients</h3>
@@ -36,28 +36,65 @@
           <td>
             <select name="nutrients" ng-model="options.nutrients">
               <!-- this right hurr is a drop down box with the nutrient names -->
+              <option data-tokens="255">water</option>
+              <option data-tokens="208">energy</option>
+              <option data-tokens="203">protein</option>
+              <option data-tokens="204">total lipids (fats)</option>
+              <option data-tokens="205">carbohydrates</option>
+              <option data-tokens="291">fiber</option>
+              <option data-tokens="269">sugar</option>
+              <option data-tokens="301">calcium</option>
+              <option data-tokens="303">iron</option>
+              <option data-tokens="306">potassium</option>
+              <option data-tokens="307">sodium</option>
+              <option data-tokens="606">saturated fat</option>
             </select>
           </td>
           <td>
-            <input name="minimize" id="minimize" type="checkbox" checked="checked">
+            <input name="minimize" id="minimize" type="checkbox">
               <!-- this checkbox determines whether we're finding alt ingredients that are greater/less than the current nutrient val -->
             </input>
           </td>
           <td>
             <span class="input-group-btn">
-              <button type="button" class="btn btn-success" ng-click="">
+              <button type="button" class="btn btn-info" data-toggle="modal" data-target="#myModal" ng-click="" > <!--findFoods()-->
                 <span class="glyphicon glyphicon-arrow-right"></span>
               </button>
             </span>
           </td>
           <td>
-            {{ingredient.item}}
-            <!-- display the health ingredients -->
+            <!-- display the healthier ingredients -->
           </td>
         </tr>
       </tbody>  
     </table>
   </div>
+
+  <div id="myModal" class="modal fade" role="dialog">
+  <div class="modal-dialog">
+
+    <!-- Modal content-->
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal">&times;</button>
+        <h4 class="modal-title">Select Your Intended Ingredient</h4>
+      </div>
+      <div class="modal-body">
+       <table class="table table-striped table-hover">
+        <tr style="cursor: pointer;" ng-repeat="option in usdaList.item" ng-click="confirmIngredient($index);">
+          <td>{{option.name}}</td>
+        </tr>
+      </table>
+
+      </div>
+      <div class="modal-footer">
+        <span>Your Ingredient Is: {{confirmed.name}}</span>
+        <button type="button" class="btn btn-default" data-dismiss="modal" ng-click="">Okay!</button> <!--addIngredientLine()-->
+      </div>
+    </div>
+
+  </div>
+</div>
   
   <div class="row">
     <h3>Healthification Statistics</h3>
